2008-01-02  Dan Williams  <dcbw@redhat.com>

	Patch from Chris Aillon

	* src/vpn-properties/nm-vpn-properties.c
		- (main): fix leak of Glade XML on shutdown (gnome.org #506849)

2007-12-31  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.glade
	  src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
		- Hook wireless security widgets up 	

2007-12-31  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.glade
		- Add wireless security page widget

	* src/connection-editor/Makefile.am
		- Add wireless security libraries and includes directory

	* src/connection-editor/nm-connection-editor.c
		- (nm_connection_editor_set_connection): add wireless security page for
			wireless connections
		- (add_wireless_security_page, get_default_type_for_security,
		   get_widget): begin implementing wireless security page

2007-12-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (get_secrets_dialog_response_cb): save the connection after hashing
			the setting, because saving the connection to GConf can trigger the
			GConf notifiers, which re-read the connection from GConf and thus
			clear secrets

2007-12-27  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/sha1.c
		- Fix WPA passphrase generation on big endian (rh #426233)

2007-12-27  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wpa-psk.c
		- (fill_connection): Ad-Hoc connections use a key-mgmt value of
			'wpa-none', not 'wpa-psk'

	* src/wireless-dialog.c
	  src/wireless-dialog.h
		- (nma_wireless_dialog_new): new argument to indicate user-created
			Ad-Hoc networks
		- (dialog_init): handle user-created Ad-Hoc networks
		- (security_combo_init): determine whether or not the network being
			modified is Ad-Hoc and pass that status to nm_utils_security_valid()

	* src/applet.c
		- (applet_settings_new_secrets_requested_cb, get_more_info,